# crop-pdf-margins

./: .gitignore  README.md  pyproject.toml
src/: borders.py  cropping.py  main.py  processing.py
src/bounds/: __init__.py  base.py  border_adjuster.py  factory.py  histogram_bounds.py  ocr_bounds.py  page_bounds.py  text_bounds.py
src/bounds/tests/: test_histogram_bounds.py
src/crop/: __init__.py  base.py  box_cropper.py  factory.py  scale_cropper.py
src/crop/scale_cropper/: __init__.py  annotations.py  annotations_fonts.py  constants.py  coordinate_transformer.py  core.py  internal_destinations.py  links.py  named_links.py
